--- a/src/Event/style.css
+++ b/src/Event/style.css
@@ -3,8 +3,8 @@
   height: 20px;
   width: 20px;
   border-radius: 20px;
-  background: rgba(0, 0, 0, 0.2);
-  opacity: 0.3;
+  background: rgba(255, 255, 255, 0.8);
+  filter:blur(1px);
 }
 
 .eventLabel {
