--- a/src/GoogleEvent/style.css
+++ b/src/GoogleEvent/style.css
@@ -1,12 +1,8 @@
-.eventPoint {
+.googleEventPoint {
   position: absolute;
   top: 200px;
   height: 20px;
   width: 20px;
   border-radius: 20px;
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.eventLabel {
-  margin-top: -40px;
+  background: rgba(0, 200, 0, 0.8);
 }
